# duck_chat

./: .gitignore  LICENSE  README.md  pyproject.toml
duck_chat/: MyWidget.py  __init__.py  __main__.py  api.py  cli.py  filechooserwindow.kv  gui.py  main.py  models.py  pyproject.toml  requirements.txt
duck_chat/models/: __init__.py  models.py  models.py:Zone.Identifier
